# emotion-analysis

./: .gitignore  CMakeLists.txt  Doxyfile  README.rst
docs/: code.rst  conf.py  index.rst  introduction.rst  manpage.rst  requirements.txt
src/: base64.cpp  base64.hpp  data_uri.cpp  data_uri.hpp  exit_codes.hpp  main.cpp  utilities.cpp  utilities.hpp
src/common/: PlottingImageListener.cpp  PlottingImageListener.hpp  Visualizer.cpp  Visualizer.h  affdex_small_logo.h
